--- a/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
+++ b/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
@@ -112,6 +112,7 @@
     margin-right: 17px;
     position: relative;
     cursor: pointer;
+    z-index: 9;
     &.tooltip {
       opacity: 1;
       &:before {
