--- a/src/app/service-page/components/service-page-questions/service-page-questions.component.html
+++ b/src/app/service-page/components/service-page-questions/service-page-questions.component.html
@@ -1,6 +1,6 @@
 <section class="questions" *ngIf="offerData">
   <h4 class="section-title">
-    Часто задаваемые вопросы
+    {{'service-page.questions-title' | translate}}
   </h4>
   <div class="question-list">
     <mat-accordion>
