--- a/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.html
+++ b/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.html
@@ -1,6 +1,6 @@
 <section class="early-viewed" *ngIf="similarOffers.length">
   <h4 class="section-title">
-    Похожие услуги “{{ offerData.title }}”
+    {{'service-page.similar-title' | translate}} “{{ offerData.title }}”
   </h4>
   <div class="cards-list">
 
@@ -13,7 +13,7 @@
           <p class="card-description__about" (click)="openOffer(offer.id)">{{offer.title}}</p>
           <div class="card-description__bottom">
             <div class="star-rating" [ngClass]="{'empty-rating': offer.averageRating.averageMark === 0}">{{offer.averageRating.averageMark}}</div>
-            <div class="card-description__comments"><a>({{offer.comments_count}} отзывов)</a></div>
+            <div class="card-description__comments"><a>({{offer.comments_count}} {{'general.comments' | translate}})</a></div>
             <a class="card-description__ava" [routerLink]="['/user', offer.user.id] | localize"><img [src]="offer.user.avatar" alt="avatar">
             </a>
           </div>
@@ -22,7 +22,7 @@
         <div class="card-bottom">
           <div class="card-bottom__like"></div>
           <div class="card-bottom__price">
-            начиная от
+            {{'service-page.similar-start-from' | translate}}
             <span>{{offer.minPrice}}</span>
           </div>
         </div>
