--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.html
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.html
@@ -4,7 +4,7 @@
       <div class="tab" (click)="openTab(i)"
 
         [ngClass]="{'active': currentTab === i, 'disabled': !offerData.allPackages && i !== 0 }">
-        {{ tab.name }}
+        {{ tab.name | translate }}
       </div>
     </ng-container>
   </div>
@@ -21,8 +21,8 @@
           <p>{{offerData[package].description }}</p>
 
           <div class="changes-term">
-            <span>{{ offerData[package].changes }} правок</span>
-            <span>{{ offerData[package].term }} дней выполнения</span>
+            <span>{{ offerData[package].changes }} {{'service-page.corrections' | translate}}</span>
+            <span>{{ offerData[package].term }} {{'service-page.days-of-completion' | translate}}</span>
           </div>
 
           <ul class="option-list">
@@ -32,14 +32,13 @@
           </ul>
         </div>
         <form class="extra-features" [formGroup]="extraFeaturesForm">
-          <div class="show-extra-features" (click)="showFeatures()" [ngClass]="{open: openFeatures}">выбрать
-            Дополнительные опции</div>
+          <div class="show-extra-features" (click)="showFeatures()" [ngClass]="{open: openFeatures}">{{'service-page.select-advanced-options' | translate}}</div>
           <ul class="extra-features__list" [ngClass]="{open: openFeatures}">
             <ng-container *ngFor="let extra_term of offerData.extra_terms">
               <div class="extra-features__item" *ngIf="extra_term.package == package && extra_term.published">
                 <mat-checkbox class="extra-features__checkbox" formControlName="extraTerms">
                   <div class="extra-features__text">
-                    <span class="extra-features__title">Сжатые сроки</span>
+                    <span class="extra-features__title">{{'service-page.short-time' | translate}}</span>
                     <span class="extra-features__price">{{extra_term.price}} UAH</span>
                   </div>
                 </mat-checkbox>
@@ -48,7 +47,7 @@
             <div class="extra-features__item" *ngIf="offerData.extra_changes.published">
               <mat-checkbox class="extra-features__checkbox" formControlName="extraChanges">
                 <div class="extra-features__text">
-                  <span class="extra-features__title">Дополнительные правки</span>
+                  <span class="extra-features__title">{{'service-page.additional-edits' | translate}}</span>
                   <span class="extra-features__price">{{offerData.extra_changes.price}} UAH</span>
                 </div>
               </mat-checkbox>
@@ -56,7 +55,7 @@
             <div class="extra-features__item" *ngIf="offerData.extra_commercial.published">
               <mat-checkbox class="extra-features__checkbox" formControlName="extraCommercial">
                 <div class="extra-features__text">
-                  <span class="extra-features__title">Коммерческое использование</span>
+                  <span class="extra-features__title">{{'service-page.commercial-use' | translate}}</span>
                   <span class="extra-features__price">{{offerData.extra_commercial.price}} UAH</span>
                 </div>
               </mat-checkbox>
@@ -77,7 +76,7 @@
         </form>
         <div class="btn-order-service 2" (click)="goCheckout(package)" >
         <!-- <div class="btn-order-service 2" (click)="setState()" > -->
-          Заказать услугу <span>(за {{ offerData[package].price }} ₴)</span>
+          {{'service-page.order-service' | translate}} <span>(за {{ offerData[package].price }} ₴)</span>
         </div>
       </div>
     </ng-container>
@@ -85,6 +84,6 @@
   </div>
 
   <div class="btn-options compare" (click)="goCompareTable()"> 
-    <span>Сравнить пакеты услуг</span>
+    <span>{{'service-page.compare-service-packages' | translate}}</span>
   </div>
 </div>
