--- a/src/app/authorization-page/set-new-pass/set-new-pass.component.html
+++ b/src/app/authorization-page/set-new-pass/set-new-pass.component.html
@@ -3,7 +3,7 @@
         <app-main-header [pageName]="'authoriz'"></app-main-header>
     </div>
     <div class="container">
-        <div class="column">
+        <div class="column reset-form">
             <h2>{{'auth-page.reset-pass-title' | translate}}</h2>
 
             <form #form="ngForm" [formGroup]="registrationForm" (ngSubmit)="registrate()">
@@ -43,9 +43,9 @@
                 <mat-form-field>
                     <mat-label>{{'auth-page.registr.repeat-password' | translate}}</mat-label>
                     <input matInput type="password" [type]="hideS ? 'password' : 'text'" formControlName="password_confirmation" required />
-                    <span class="pass" mat-icon-button matSuffix (click)="hideS = !hideS" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideS" [style.color]="hideS ? '#DBDBDB': '#000'">
+                    <button type="button" class="pass" mat-icon-button matSuffix (click)="hideS = !hideS" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideS" [style.color]="hideS ? '#DBDBDB': '#000'">
             <mat-icon>{{hideS ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </span>
+                    </button>
                     <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('required')">{{'auth-page.login.put-password' | translate}}
                     </mat-error>
                     <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('NoPassswordMatch')">
