--- a/src/app/shared/modules/system-messages/system-messages.component.html
+++ b/src/app/shared/modules/system-messages/system-messages.component.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="notification-item__text" (click)="openChat(message.roomId, message.id, i, message.deal_id)">
                         <span>{{ "bell-notifications." + [message.message] | translate }} </span>"{{message.offers_title}}"</div>
-                    <div class="notification-item__date">{{message | json }}</div>
+                    <div class="notification-item__date">{{message }}</div>
                     <div class="notification-delete" (click)="deleteMessageItem(message.id, i)"></div>
                 </div>
             </ng-container>
